Project

General

Profile

Actions

Bug #22369

closed

out of order reply on set-chunks.yaml workload

Added by Sage Weil over 6 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2017-12-11T19:36:26.949 INFO:tasks.rados.rados.0.smithi134.stdout:update_object_version oid 283 oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo v 420 (ObjNum 745 snap 0 seq_num 745) dirty exists
2017-12-11T19:36:26.949 INFO:tasks.rados.rados.0.smithi134.stdout:7065:  left oid 283 oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo (ObjNum 745 snap 0 seq_num 745)
2017-12-11T19:36:26.949 INFO:tasks.rados.rados.0.smithi134.stdout:7066:  expect (ObjNum 624 snap 0 seq_num 624)
2017-12-11T19:36:27.097 INFO:tasks.rados.rados.0.smithi134.stdout:7068:  finishing write tid 1 to smithi13428720-39 oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo
2017-12-11T19:36:27.097 INFO:tasks.rados.rados.0.smithi134.stdout:7068:  finishing write tid 5 to smithi13428720-39 oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo
2017-12-11T19:36:27.097 INFO:tasks.rados.rados.0.smithi134.stdout:7068:  finishing write tid 2 to smithi13428720-39 oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo
oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo
2017-12-11T19:36:27.097 INFO:tasks.rados.rados.0.smithi134.stderr:Error: finished tid 2 when last_acked_tid was 5
...

/a/sage-2017-12-11_17:19:16-rados-wip-sage-testing-2017-12-11-0902-distro-basic-smithi/1954501

rados/thrash/{0-size-min-size-overrides/2-size-2-min-size.yaml 1-pg-log-overrides/normal_pg_log.yaml backoff/normal.yaml ceph.yaml clusters/{fixed-2.yaml openstack.yaml} d-balancer/upmap.yaml msgr-failures/fastclose.yaml msgr/random.yaml objectstore/bluestore-bitmap.yaml rados.yaml rocksdb.yaml thrashers/none.yaml thrashosds-health.yaml workloads/set-chunks.yaml}

Actions #1

Updated by Sage Weil over 6 years ago

  • Description updated (diff)
  • Status changed from New to 12
  • Priority changed from Normal to Urgent
Actions #2

Updated by Myoungwon Oh over 6 years ago

Let me take a look at this issue.

Actions #4

Updated by Sage Weil over 6 years ago

  • Status changed from 12 to Resolved
Actions

Also available in: Atom PDF